CMAKE_MINIMUM_REQUIRED( VERSION 2.8)
PROJECT( Demosaicing )
set( OpenCV_DIR "/usr/local/share/OpenCV" ) 
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
add_executable( Demosaicing main.cpp Demosaicing.cpp GBTF.cpp )
TARGET_LINK_LIBRARIES( Demosaicing ${OpenCV_LIBRARIES} )
